--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.lightgray_box {
+  width: 940px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #eff3f4;
+  box-sizing: border-box;
+}
+
+.first_tier_img {
+  margin: 0 20px 10px 0;
+  float: left;
+}
+
+.text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+.third_tier_img {
+  margin: 0 0 10px 20px;
+  float: right;
+}
 
 /* 回答はここに書いてね */
