--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.the_table {
+  width: 100%;
+  border: solid #dedede 1px;
+}
 
+.the_cell {
+  border: solid #dedede 1px;
+  padding: 10px;
+  text-align: center;
+  vertical-align: center;
+}
+
+.table_row:first-child {
+  background-color: #2244aa;
+  color: #ffffff;
+}
+
+.the_cell:first-child {
+  background-color: #2244aa;
+  color: #ffffff;
+}
+
+.table_row:last-child {
+  border-top: dashed #000 2px;
+}
+
+.table_row:nth-child(3),
+.table_row:nth-child(5) {
+  background-color: #ecf1f2;
+}
 /* 回答はここに書いてね */
