--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,97 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.wrapper_of_container {
+  margin: auto;
+  width: 500px;
+  height: 500px;
+  background-color: #ecf1f2;
+  position: relative;
+}
+
+.container {
+  width: 100px;
+  height: 100px;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 100px;
+}
+
+.container:not(.box9) {
+  position: absolute;
+}
+
+.box8 {
+  background-color: #de70cf;
+  top: 120px;
+  left: 120px;
+  z-index: 7;
+}
+
+.box5 {
+  background-color: #9fd6d2;
+  top: 360px;
+  left: 200px;
+  z-index: 4;
+}
+
+.box1 {
+  background-color: #ffefd3;
+  top: 40px;
+  left: 200px;
+  z-index: 0;
+}
+
+.box7 {
+  background-color: #deae70;
+  top: 200px;
+  left: 40px;
+  z-index: 6;
+}
+
+.box4 {
+  background-color: #8b7a5e;
+  top: 280px;
+  left: 280px;
+  z-index: 3;
+}
+
+.box6 {
+  background-color: #fffee4;
+  top: 280px;
+  left: 120px;
+  z-index: 5;
+}
+
+.box2 {
+  background-color: #7084de;
+  top: 120px;
+  left: 280px;
+  z-index: 1;
+}
+
+.box3 {
+  background-color: #d0ecea;
+  top: 200px;
+  left: 360px;
+  z-index: 2;
+}
+
+.box9 {
+  background-color: #2b69a3;
+  position: fixed;
+  top: 10px;
+  left: 10px;
+}
+
+.box8::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #ffefd3;
+  position: absolute;
+  left: 80px;
+}
 
 /* 回答はここに書いてね */
