--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -2,4 +2,74 @@
 
 /* 回答はここに書いてね */
 
+/* q9-1↓ */
+.hover_container {
+  position: relative;
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.car_img {
+  width: 500px;
+  height: 333px;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.hover_mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: -100%;
+  opacity: 0;
+  background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,8));
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+.mask_text {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #fff;
+  box-sizing: border-box;
+  word-break: break-all;
+}
+
+.hover_container:hover .hover_mask {
+  opacity: 1;
+  bottom: 0;
+}
+
+.hover_container:hover .car_img {
+  transform: scale(1.5);
+}
+/* q9-1↑ */
+
+/* q9-2↓ */
+.spinner {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px #ecf1f2 solid;
+  border-top-color: #00bcd4;
+  border-radius: 50%;
+  animation: loader 1.1s infinite linear;
+}
+
+@keyframes loader {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
 /* 回答はここに書いてね */
