--- a/layout_parts/q10/css/style.css
+++ b/layout_parts/q10/css/style.css
@@ -1,5 +1,30 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.comment {
+  position: relative;
+  width: 500px;
+  margin: 0 auto;
+  border: 5px solid #222;
+  padding: 20px;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 16px;
+  border-radius: 30px;
+  z-index: 0;
+}
 
+.comment:after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-left: 5px solid #222;
+  border-bottom: 5px solid #222;
+  transform: rotate(-45deg);
+  z-index: 1;
+  left: 50px;
+  bottom: -20px;
+}
 /* 回答はここに書いてね */
