--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -15,7 +15,7 @@
   box-sizing: border-box;
 }
 
-.first_tier_img {
+.left_img {
   margin: 0 20px 10px 0;
   float: left;
 }
@@ -26,7 +26,7 @@
   word-break: break-all;
 }
 
-.third_tier_img {
+.right_img {
   margin: 0 0 10px 20px;
   float: right;
 }
