--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,70 +1,52 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.offwhite_box {
+.offwhite_container {
   padding: 20px;
 }
 
-.top_container {
+.wrapper_of_3boxes {
   width: 100%;
   display: table;
+  margin-bottom: 40px;
 }
 
-.bottom_container {
-  width: 100%;
-  display: table;
-  margin-top: 40px;
+.wrapper_of_3boxes:last-child {
+  margin-bottom: 0;
 }
 
 .orange_box {
-  display: table-cell;
   width: 100px;
   background-color: #fdc8b8;
-  padding: 20px;
-  text-align: center;
-  vertical-align: center;
 }
 
 .pink_box {
-  display: table-cell;
   background-color: #e0abd9;
-  padding: 20px;
-  text-align: center;
-  vertical-align: center;
 }
 
 .blue_box {
-  display: table-cell;
   width: 100px;
   background-color: #b6d8ed;
-  padding: 20px;
-  text-align: center;
-  vertical-align: center;
 }
 
 .yellow_box {
-  display: table-cell;
   background-color: #e5d32e;
-  padding: 20px;
-  text-align: center;
-  vertical-align: center;
 }
 
 .red_box {
-  display: table-cell;
   background-color: #ec8f9a;
-  padding: 20px;
-  text-align: center;
-  vertical-align: center;
 }
 
 .green_box {
-  display: table-cell;
   width: 500px;
   background-color: #8fdcad;
+}
+
+.common_style {
+  display: table-cell;
   padding: 20px;
   text-align: center;
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 .clearfix::after{
