--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -52,6 +52,7 @@
 }
 
 .stable_position {
+  display: flex;
   position: absolute;
   margin: auto;
   top: 0;
@@ -61,6 +62,9 @@
   width: 110px;
   height: 30px;
   padding: 10px;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
 }
 
 .container_of_flexible_position {
@@ -69,6 +73,11 @@
 
 .flexible_position {
   position: absolute;
+  width: 110px;
+  height: 30px;
+  padding: 10px;
+  line-height: 10px;
+  box-sizing: border-box;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
