--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -88,7 +88,8 @@
   height: 20px;
   background-color: #ffefd3;
   position: absolute;
-  left: 80px;
+  top: 0;
+  right: 0;
 }
 
 /* 回答はここに書いてね */
